--- a/componentcorner/src/Header.css
+++ b/componentcorner/src/Header.css
@@ -2,14 +2,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  background-color: #111827;
-  color: white;
 }
 
-.header a {
-  margin-left: 16px;
+.cart-container {
+  position: relative;
+}
+
+.cart-count {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: red;
   color: white;
-  text-decoration: none;
-  font-weight: 500;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
 }
